--- a/src/renderer/App/App.css
+++ b/src/renderer/App/App.css
@@ -5,11 +5,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
   margin-bottom: 2em;
 }
@@ -33,13 +33,18 @@
   color: #47848f;
 }
 
+#javascript-link {
+  color: #f7df1e;
+}
+
 .container {
   display: flex;
   flex-direction: column;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  #react-logo,
+  #electron-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
